--- a/pom.xml
+++ b/pom.xml
@@ -30,11 +30,11 @@
             <artifactId>camel-spring-boot-starter</artifactId>
             <version>2.19.2</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>1.5.7.RELEASE</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
@@ -54,6 +54,11 @@
             <groupId>com.uber.jaeger</groupId>
             <artifactId>jaeger-core</artifactId>
             <version>0.20.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
+            <artifactId>camel-netty4-http</artifactId>
+            <version>2.19.2</version>
         </dependency>
     </dependencies>
 
