--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.estafet</groupId>
-    <artifactId>CamelBoot</artifactId>
+    <artifactId>CamelPrimeValidator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
